# TreeOrdination

./: .gitignore  LICENSE  MANIFEST  README.md  diseased_gut_data.py  environment.yml  pyproject.toml  setup.py
.github/workflows/: ci.yml
TreeOrdination/: TreeOrdination.py  __init__.py  feature_importance_treeord.py  transformers_treeord.py
docs/: API.md  CONTRIBUTING.md
tests/: test_treeord.py
